预答辩前版本

--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -99,7 +99,7 @@
 @Article{李明2015基于功效系数法的隧道结构健康监测系统预警研究,
   author  = {李明 and 陈卫忠 and 杨建平 and 肖正龙},
   title   = {基于功效系数法的隧道结构健康监测系统预警研究},
-  journal = {Rock and Soil Mechanics},
+  journal = {岩土力学},
   year    = {2015},
   lang    = {zh},
   pinyin  = {limingchenweizhongyangjianping},
@@ -784,7 +784,7 @@
 @Article{李喆2005相邻隧道施工对上海地铁二号线的影响分析,
   author  = {李喆 and 张子新},
   title   = {相邻隧道施工对上海地铁二号线的影响分析},
-  journal = {Chinese Journal of Rock Mechanics and Engineering},
+  journal = {岩石力学与工程学报},
   year    = {2005},
   lang    = {zh},
   pinyin  = {lizhezhangzixin},
@@ -1488,6 +1488,7 @@
   publisher = {科学出版社},
   year      = {2005},
   author    = {张仁铎 and 博士},
+  address   = {北京},
   lang      = {zh},
   pinyin    = {zhangrenze},
 }
@@ -1544,8 +1545,77 @@
   year      = {2014},
   pages     = {304--310},
   address   = {西安},
+  publisher = {人民交通出版社出版},
   lang      = {zh},
   pinyin    = {qiaoyafeidingwenqizhuhehuaguanlinxing},
+}
+
+@Article{su2005grid,
+  author    = {Su, Ming-Daw and Kang, Jui-Lin and Chang, Ling-Fang and Chen, Albert S},
+  title     = {A grid-based GIS approach to regional flood damage assessment},
+  journal   = {Journal of Marine Science and Technology},
+  year      = {2005},
+  volume    = {13},
+  number    = {3},
+  pages     = {184--192},
+  publisher = {National Taiwan Ocean University},
+}
+
+@Article{朱强2007基于网格的洪水损失计算模型,
+  author    = {朱强 and 陈秀万 and 彭俊},
+  title     = {基于网格的洪水损失计算模型},
+  journal   = {武汉大学学报 (工学版)},
+  year      = {2007},
+  volume    = {40},
+  number    = {6},
+  pages     = {42--46},
+  lang      = {zh},
+  pinyin    = {zhuqiangchenxiuwanpengjun},
+  publisher = {武汉大学期刊社},
+}
+
+@Article{islam2007grid,
+  author    = {Islam, Md Sirajul and Oki, Taikan and Kanae, Shinjiro and Hanasaki, Naota and Agata, Yasushi and Yoshimura, Kei},
+  title     = {A grid-based assessment of global water scarcity including virtual water trading},
+  journal   = {Water Resources Management},
+  year      = {2007},
+  volume    = {21},
+  number    = {1},
+  pages     = {19},
+  publisher = {Springer},
+}
+
+@Article{郭孟欣2016基于网格的铁路建设工程风险指数评价模型研究,
+  author    = {郭孟欣 and 钟雁 and 王福田 and 杨惠文 and others},
+  title     = {基于网格的铁路建设工程风险指数评价模型研究?},
+  journal   = {交通信息与安全},
+  year      = {2016},
+  number    = {2016 年 01},
+  pages     = {85--90},
+  lang      = {zh},
+  pinyin    = {guomengxinzhongyanwangfutian},
+  publisher = {武汉理工大学| 交通计算机应用信息网},
+}
+
+@PhdThesis{白磊2017铁路轨道健康管理网格化分析决策模型研究,
+  author  = {白磊},
+  title   = {铁路轨道健康管理网格化分析决策模型研究},
+  school  = {北京交通大学},
+  year    = {2017},
+  address = {北京},
+  lang    = {zh},
+  pinyin  = {beilei},
+}
+
+@Article{jenelius2012road,
+  author    = {Jenelius, Erik and Mattsson, Lars-G{\"o}ran},
+  title     = {Road network vulnerability analysis of area-covering disruptions: A grid-based approach with case study},
+  journal   = {Transportation research part A: policy and practice},
+  year      = {2012},
+  volume    = {46},
+  number    = {5},
+  pages     = {746--760},
+  publisher = {Elsevier},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
