--- a/tex/Chap1.tex
+++ b/tex/Chap1.tex
@@ -243,9 +243,11 @@ Borrmann和Jubierre（\citeyear{borrmann2013multi}）认为现有的IFC标准无
 
 已有基于单项指标的评估方法未能对盾构隧道的整体服役性能作出评判，而且同一段隧道采用不同的单项指标评估将得到不同的评估结果。目前根据调查研究，盾构隧道在运营期会出现许多病害，如衬砌缺角、掉块、混凝土碳化、剥落、剥离、空洞、钢筋锈蚀、空气水环境中的氯离子、硫酸根离子等（Yuan等，\citeyear{yuan2013predictive}）。叶耀东等（\citeyear{叶耀东2007软土地铁运营隧道病害现状及成因分析}）总结了上海地铁盾构隧道在运营期的主要病害有渗漏水、裂缝、损坏、纵向沉降和收敛变形等。对于这么多单项病害，现有的单项指标评估方法未对所有的单项指标给出评判标准。不过这种方法因为使用简单，在实际工程应用较多，并编写成行业规范。
 
+已有基于力学模型的评估方法较难建立考虑真实病害情况的数值模型，而且即使有能建立相应的数值模型，其计算分析时间较长。如考虑衬砌纵缝接头的力学性能，建立三维精细化接头力学模型，张厚美等（\citeyear{张厚美2000圆形隧道装配式衬砌接头刚度模型研究}）构建的三维有限元模型中，混凝土采用实体单元和弹塑性本构，衬垫采用板单元和曲线本构，连接螺栓采用杆单元，衬垫与混凝土表面之间设置接触单元；曾东洋等（\citeyear{曾东洋2005地铁盾构隧道管片接头刚度影响因素研究}）引入面-面接触单元和衬垫单元模拟各构件之间的接触关系；Chen等（\citeyear{chen2009numerical}）接头三维精细化有限元模型包括管片、接头、螺栓及手孔等，分析了施工期和服役期盾构隧道管片裂缝或破损问题。虽然上述模型能较好地分析隧道服役性能劣化的原因，但在评估分析过程中比较耗时。
+
 已有基于数学模型的评估方法未考虑各指标之间的相关性和单个指标权重随着指标劣化而变化的情况。在隧道服役性能评估方面，层次分析法因具有综合性强，原理简单等优点，被广泛应用（戴胜，\citeyear{戴胜2008越江盾构隧道耐久性分析与评估体系研究}；李晓英等，\citeyear{李晓英2008铁路隧道健康状态模糊评价体系研究}；段怀志，\citeyear{段怀志2009隧道及地下工程健康评估研究}；张素磊，\citeyear{张素磊2012隧道衬砌结构健康诊断及技术状况评定研究}；Rao等，\citeyear{rao2016fuzzy}）。根据层次分析法的理论原理（Saaty和Vargas，\citeyear{saaty2012models}），评估指标之间是相互独立的，但实际情况并非如此，如隧道的横向收敛会导致衬砌纵缝的张开量，隧道的纵向变形会导致衬砌环向接缝的张开量和衬砌环错台的发生。另外，由层次分析法评判矩阵计算得出的指标权重是常量，在实际情况中，当某一评估指标劣化严重时，根据“木桶效应”，隧道的整体服役性能应该是迅速下降的，体现为劣化指标权重的增加。
 
-已有基于力学模型的评估方法较难建立考虑真实病害情况的数值模型，而且即使有能建立相应的数值模型，其计算分析时间较长。如考虑衬砌纵缝接头的力学性能，建立三维精细化接头力学模型，张厚美等（\citeyear{张厚美2000圆形隧道装配式衬砌接头刚度模型研究}）构建的三维有限元模型中，混凝土采用实体单元和弹塑性本构，衬垫采用板单元和曲线本构，连接螺栓采用杆单元，衬垫与混凝土表面之间设置接触单元；曾东洋等（\citeyear{曾东洋2005地铁盾构隧道管片接头刚度影响因素研究}）引入面-面接触单元和衬垫单元模拟各构件之间的接触关系；Chen等（\citeyear{chen2009numerical}）接头三维精细化有限元模型包括管片、接头、螺栓及手孔等，分析了施工期和服役期盾构隧道管片裂缝或破损问题。虽然上述模型能较好地分析隧道服役性能劣化的原因，但在评估分析过程中比较耗时。
+在其他工程领域，已由点状和线状的评估方法向网格化空间评估发展，如洪水灾害评估模型基于空间网格计算洪水灾害损失（Su等，\citeyear{su2005grid}）；Islam等，\citeyear{islam2007grid}；朱强等，\citeyear{朱强2007基于网格的洪水损失计算模型}）、铁路轨道网格（或部件）的空间风险评估模型（郭孟欣等，\citeyear{郭孟欣2016基于网格的铁路建设工程风险指数评价模型研究}；白磊，\citeyear{白磊2017铁路轨道健康管理网格化分析决策模型研究}）、道路工程的网状路面开裂评估模型（Jenelius，\citeyear{jenelius2012road}）等，对于盾构隧道相关研究较少。
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
 \subsection{服役性能预测的问题}
@@ -306,8 +308,8 @@ Borrmann和Jubierre（\citeyear{borrmann2013multi}）认为现有的IFC标准无
 
 本文主要创新点有：
 
-（1）建立服役性能指标（TSI）与观测变量之间的定量化关系，以及修正TSI公式，使其适用于隧道全寿命周期。
+（1）提出定量化盾构隧道服役性能指标（TSI）计算公式，并应用于宏观空间网格化评估。
 
-（2）建立考虑沉降空间关联性的结构-向量时间序列模型，并得出服役性能指标的退化模型。
+（2）建立考虑同期沉降空间关联性的结构-向量时间序列模型，由此得出服役性能指标的退化模型。
 
-（3）研究和设计了盾构隧道服役性能相关分析功能的微服务框架，具备可扩展性强、独立开发部署和分析功能即服务等优点。
+（3）研究和设计了盾构隧道服役性能相关分析功能的分布式微服务框架，具备可扩展性强、独立开发部署和分析功能即服务等优点。
