--- a/tex/Chap6.tex
+++ b/tex/Chap6.tex
@@ -17,11 +17,13 @@
 
 （2）对于长期服役性能的评价（超过20年的运营时间），在不具备数据实例的情况下，采用动态变权函数考虑指标长期劣化对服役性能的影响，修正TSI公式在盾构隧道全寿命周期的应用，构造分段状态变权函数，模拟TSI公式的指标权重随着指标劣化而增加。
 
-（3）以隧道沉降数据为例，建立隧道服役性能退化模型，首先采用自回归滑动平均模型建立ARMA(3,0)模型，该模型对于沉降二阶差分的拟合$R^2$在0.6以上，原始沉降数据的拟合$R^2$在0.95以上；其次引入向量式模拟多维序列的滞后项关联性，和结构式模拟同期项关联性，建立SVAR(3)结构向量模型，该模型对于沉降二阶差分的拟合$R^2$在0.75以上，原始沉降数据的拟合$R^2$在0.97以上。考虑空间关联性的模型精准度得到提高，且由SVAR模型也能得出距离更近的监测点关联性更高。
+（3）基于影响服役性能因素如周围地层环境、结构上覆荷载等具有空间关联性的假设，采用空间变异理论，将点状、线状的服役性能评估推广为空间网格化评估，宏观上为隧道养护维护工作提供指导。
 
-（4）基于微服务架构，设计了盾构隧道服役性能相关的分析服务，主要包括数据服务、有限元服务和隧道服役性能服务，制定不同服务的请求数据和响应数据标准，讨论在不同分析服务功能下的数据交换方式，包括一对一、一对多、同步、异步的通信模式，对于所有分析服务的管理引入服务发现机制，采用注册中心方式对外提供一致性的调用方式。较传统的一体式应用的扩展性更强，对于已有的不同语言开发的分析功能封装高效，为用户提供一种简单获取分析能力的形式。
+（4）以隧道沉降数据为例，建立隧道服役性能退化模型，首先采用自回归滑动平均模型建立ARMA(3,0)模型，该模型对于沉降二阶差分的拟合$R^2$在0.6以上，原始沉降数据的拟合$R^2$在0.95以上；其次引入向量式模拟多维序列的滞后项关联性，和结构式模拟同期项关联性，建立SVAR(3)结构向量模型，该模型对于沉降二阶差分的拟合$R^2$在0.75以上，原始沉降数据的拟合$R^2$在0.97以上。考虑空间关联性的模型精准度得到提高，且由SVAR模型也能得出距离更近的监测点关联性更高。
 
-（5）本文成果均以微服务架构实现为基础设施智慧服务系统iS3的服务层，并开发了iS3 Desktop桌面端和iS3 Web网页端应用，在工程案例应用中表明，分析服务可为不同应用提供统一的分析能力，辅助管理盾构隧道工程地质勘察、结构设计、运营监测和养护维护各全寿命期阶段。
+（5）基于微服务架构，设计了盾构隧道服役性能相关的分析服务，主要包括数据服务、有限元服务和隧道服役性能服务，制定不同服务的请求数据和响应数据标准，讨论在不同分析服务功能下的数据交换方式，包括一对一、一对多、同步、异步的通信模式，对于所有分析服务的管理引入服务发现机制，采用注册中心方式对外提供一致性的调用方式。较传统的一体式应用的扩展性更强，对于已有的不同语言开发的分析功能封装高效，为用户提供一种简单获取分析能力的形式。
+
+（6）本文成果均以微服务架构实现为基础设施智慧服务系统iS3的服务层，并开发了iS3 Desktop桌面端和iS3 Web网页端应用，在工程案例应用中表明，分析服务可为不同应用提供统一的分析能力，辅助管理盾构隧道工程地质勘察、结构设计、运营监测和养护维护各全寿命期阶段。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{进一步工作与展望}
