--- a/tex/Cover.tex
+++ b/tex/Cover.tex
@@ -3,7 +3,7 @@
 % 保密文字位置可能有问题，需要到cls文件中调整
 \secretlevel{保密} \secretyear{2}
 
-\ctitle{盾构隧道服役性能的定量化评估与预测及其分布式服务研究}
+\ctitle{盾构隧道服役性能指标（TSI）评估预测模型与应用研究}
 % 按照申请工学学位设计。如有其它需要，请修改相应文字。
 \makeatletter
   \iftongji@doctor
@@ -51,7 +51,7 @@
 %\efunds{Supported by the Natural Science Foundation of China（No.XXXXXX）}
 
 
-\etitle{Study on microservice of shield tunnel serviceabilit evaluation and prediction}
+\etitle{Study on evaluation, prediction and application of shield tunnel serviceabilit index}
 
 \eauthor{Xiaodong Lin}
 
