--- a/tex/Resume.tex
+++ b/tex/Resume.tex
@@ -28,7 +28,7 @@
 	\hangindent 1.5em
 	[2]~李晓军, 林晓东, 朱合华, 陈楠. 考虑发展趋势和动态权重的盾构隧道健康状态模糊层次分析法.
 
-	\resumeitem{学术报告}
+	\resumeitem{学术会议}
 
 	\hangindent 1.5em
 	[1]~The Second  International  Conference  on  Information  Technology  in  Geo-Engineering (ICITG2014), July 21-22, 2014, Durham, UK. （做了题为“A Web-based Digital Platform for Shield Tunnel Operation Management”的报告）
