--- a/tex/Abstract.tex
+++ b/tex/Abstract.tex
@@ -9,11 +9,13 @@
 
 （2）针对隧道长期服役性能评估（超过20年运营时间），由于缺少实际样本数据，本文提出动态变权函数对长期服役性能评估进行修正，模拟评估指标随着运营时间不断劣化对服役性能的影响，根据对服役性能指标劣化严重性的假设，构造分段状态变权函数，修正TSI公式应用于隧道全寿命周期。
 
-（3）收集整理隧道历史沉降数据，建立了适用于盾构隧道的自回归滑动平均模型（ARMA）和结构向量（SVAR）时间序列模型。建立的ARMA(3,0)对于沉降二阶差分的拟合$R^2$在0.6以上，原始沉降数据的拟合$R^2$在0.95以上；结构向量模型则引入向量式模拟多维序列的滞后项关联性，和结构式模拟同期项关联性，建立的SVAR(3)模型对于沉降二阶差分的拟合$R^2$在0.75以上，原始沉降数据的拟合$R^2$在0.97以上。考虑空间关联性的模型精准度得到提高，且由SVAR模型也能得出距离更近的监测点关联性更高。
+（3）基于影响服役性能因素如周围地层环境、结构上覆荷载等具有空间关联性的假设，采用空间变异理论，将点状、线状的服役性能评估推广为空间网格化评估，宏观上为隧道养护维护工作提供指导。
 
-（4）为了改进传统单体式应用模块复杂、体量庞大、可扩展性差等问题，遵循单一功能、独立部署和轻量级通信的原则，设计了盾构隧道服役性能相关的分析服务，包括数据服务、有限元服务和隧道服役性能服务。并研究了微服务的关键技术，如制定不同服务的请求数据和响应数据标准，讨论在不同分析服务功能下的数据交换方式，包括一对一、一对多、同步、异步的通信模式，对于所有分析服务的管理引入服务发现机制，采用注册中心方式对外提供一致性的调用方式。较传统的单体式应用的扩展性更强，对于已有的不同语言开发的分析功能封装高效，为用户提供一种简单获取分析能力的形式。
+（4）收集整理隧道历史沉降数据，建立了适用于盾构隧道的自回归滑动平均模型（ARMA）和结构向量（SVAR）时间序列模型。建立的ARMA(3,0)对于沉降二阶差分的拟合$R^2$在0.6以上，原始沉降数据的拟合$R^2$在0.95以上；结构向量模型则引入向量式模拟多维序列的滞后项关联性，和结构式模拟同期项关联性，建立的SVAR(3)模型对于沉降二阶差分的拟合$R^2$在0.75以上，原始沉降数据的拟合$R^2$在0.97以上。考虑空间关联性的模型精准度得到提高，且由SVAR模型也能得出距离更近的监测点关联性更高。
 
-（5）简单介绍了基础设施智慧服务系统（iS3）的组成，包括基础层、数据层、服务层、应用层和用户层，盾构隧道服役性能微服务成果集成为iS3的服务层，向上对应用层提供服务。另外，本文还开发了iS3 Desktop桌面端和 iS3 Web网页端，在上海地铁12号线工程案例应用中表明，分析服务可为不同应用提供统一的分析能力，辅助管理盾构隧道工程地质勘察、结构设计、运营监测和养护维护各全寿命期阶段。
+（5）为了改进传统单体式应用模块复杂、体量庞大、可扩展性差等问题，遵循单一功能、独立部署和轻量级通信的原则，设计了盾构隧道服役性能相关的分析服务，包括数据服务、有限元服务和隧道服役性能服务。并研究了微服务的关键技术，如制定不同服务的请求数据和响应数据标准，讨论在不同分析服务功能下的数据交换方式，包括一对一、一对多、同步、异步的通信模式，对于所有分析服务的管理引入服务发现机制，采用注册中心方式对外提供一致性的调用方式。较传统的单体式应用的扩展性更强，对于已有的不同语言开发的分析功能封装高效，为用户提供一种简单获取分析能力的形式。
+
+（6）简单介绍了基础设施智慧服务系统（iS3）的组成，包括基础层、数据层、服务层、应用层和用户层，盾构隧道服役性能微服务成果集成为iS3的服务层，向上对应用层提供服务。另外，本文还开发了iS3 Desktop桌面端和 iS3 Web网页端，在上海地铁12号线工程案例应用中表明，分析服务可为不同应用提供统一的分析能力，辅助管理盾构隧道工程地质勘察、结构设计、运营监测和养护维护各全寿命期阶段。
 
 \end{cabstract}
 
