--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -1618,4 +1618,36 @@
   publisher = {Elsevier},
 }
 
+@Article{Tastu2011Spatio,
+  author  = {Tastu, Julija and Pinson, Pierre and Kotwa, Ewelina and Madsen, Henrik and Nielsen, Henrik Aa.},
+  title   = {Spatio‐temporal analysis and modeling of short‐term wind power forecast errors},
+  journal = {Wind Energy},
+  year    = {2011},
+  volume  = {14},
+  number  = {1},
+  pages   = {43–60},
+}
+
+@PhdThesis{李世鹏2014基于时空序列模型的变形分析研究,
+  author  = {李世鹏},
+  title   = {基于时空序列模型的变形分析研究},
+  school  = {长安大学},
+  year    = {2014},
+  address = {西安},
+  lang    = {zh},
+  pinyin  = {lishipeng},
+}
+
+@Article{罗跃2015上海市地下水位大幅抬升条件下土层变形特征分析,
+  author  = {罗跃 and 叶淑君 and 吴吉春 and 焦珣 and 王寒梅},
+  title   = {上海市地下水位大幅抬升条件下土层变形特征分析},
+  journal = {高校地质学报},
+  year    = {2015},
+  volume  = {21},
+  number  = {2},
+  pages   = {243--254},
+  lang    = {zh},
+  pinyin  = {luoyueyeshujunwujichun},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
