--- a/tex/Abstract.tex
+++ b/tex/Abstract.tex
@@ -3,19 +3,23 @@
 % 定义中英文摘要和关键字
 \begin{cabstract}
 
-近年我国城市轨道交通建设规模持续增长，快速发展模式导致人们忽略了隧道结构长期服役性能，为避免服役性能的劣化导致结构发生不可逆转破坏，有必要对服役性能进行评估、预测性能退化曲线，并提供服役性能分析服务，指导隧道日常养护维护。在服役性能评估方面，单项指标评估方法未能对整体性能作出评判，且不同的单项指标评估得到的结果不同；力学模型的评估方法较难建立考虑真实病害情况的数值模型。在服役性能预测方面，已有的性能退化模型主要考虑时间因素，未考虑数据之间的空间关联性特点。在服役性能服务方面，目前的综合性平台以单体式应用为主，平台庞大，可扩展性弱。因此本文以盾构隧道结构为研究对象，以上海城市轨道交通12号线为工程案例，研究了盾构隧道服役性能定量化的评估方法，建立了考虑空间关联性的服役性能预测模型，以及设计了微服务架构的分析服务。主要工作和研究成果如下：
+近年我国城市轨道交通建设规模持续增长，快速发展模式导致人们忽略了隧道结构长期服役性能，为避免服役性能的劣化导致结构发生不可逆转破坏，有必要对服役性能进行评估、预测性能退化曲线，并提供服役性能分析服务，指导隧道日常养护维护。在服役性能评估方面，单项指标评估方法未能对整体性能作出评判，且不同的单项指标评估得到的结果不同；力学模型的评估方法较难建立考虑真实病害情况的数值模型。在服役性能预测方面，已有的性能退化模型主要考虑时间因素，未考虑数据之间的空间关联性特点。在服役性能服务方面，目前的综合性平台以单体式应用为主，平台庞大，可扩展性弱。因此本文以盾构隧道结构为研究对象，以上海城市轨道交通为工程案例，研究了盾构隧道服役性能定量化的评估方法，建立了考虑空间关联性的服役性能预测模型，以及设计了微服务架构的分析服务。主要工作和研究成果如下：
 
-（1）定义了盾构隧道服役性能（TSI）相关的基本概念和服役性能评估的基本假设，在考虑盾构隧道评估指标获取难度和指标相关性基础上，结合数据之间的相关性，选取六个指标，分别为相对沉降平均值${sett}_{a}$、平均差异沉降$set{{t}_{d\_a}}$、平均收敛变形率${cov}_{a}$、百环渗漏水面积${d}_{l}$、百环衬砌剥落面积${d}_{s}$、百环裂缝长度${d}_{c}$。对39个隧道样本进行专家打分基础上，采用偏最小二乘、主成分分析和典型相关性分析对服役性能TSI回归拟合，结果表明，对早期盾构隧道服役性能（目前隧道样本的运营年限均在20年以内）影响较大的指标依次为相对沉降、收敛变形、渗漏水和差异沉降，衬砌剥落和裂缝两个指标的权重较小，主要原因是早期的剥落并不是运营期间产生的，而是由于施工期的不当操作造成，且在运营期这类病害并没有劣化的趋势。
+The construction of the urban rail transit is increasing these year, leading to the problem that the long-term serviceability of shield tunnel is often ignored. In order to avoid the irreversible destruction caused by structure deterioration, it is necessary to have a study on the serviceability assessment, performance prediction and analysis service, providing guidance for daily maintenance and rehabitation. For serviceability assessment, the single assessment indicator cannot be used to get a comprehensive result and the mechanical model cannot simulate the complicated defects in tunnels. For performance prediction, most of the deterioration models focus on the time factor, but not consider the spatial relationship between the data. For analysis service, the monolithic applications are popular solutions, with a poor scalability. Therefor, Shanghai urban rail transit are chosen as the case study to establish the quantitive serviceability assessment, building the spatial-correlated prediction model and design the analysis microservice architecture. The main contents and conclusions are as following:
 
-（2）针对隧道长期服役性能评估（超过20年运营时间），由于缺少实际样本数据，本文提出动态变权函数对长期服役性能评估进行修正，模拟评估指标随着运营时间不断劣化对服役性能的影响，根据对服役性能指标劣化严重性的假设，构造分段状态变权函数，修正TSI公式应用于隧道全寿命周期。
+（1）定义了盾构隧道服役性能（TSI）相关的基本概念和服役性能评估的基本假设，在考虑盾构隧道评估指标获取难度和指标相关性基础上，选取六个指标，分别为相对沉降平均值${sett}_{a}$、平均差异沉降$set{{t}_{d\_a}}$、平均收敛变形率${cov}_{a}$、百环渗漏水面积${d}_{l}$、百环衬砌剥落面积${d}_{s}$、百环裂缝长度${d}_{c}$。对隧道样本进行专家打分基础上，采用考虑主成分分析和典型相关性分析的多元回归方法对服役性能TSI进行拟合，结果表明，对早期盾构隧道服役性能（目前隧道样本的运营年限均在20年以内）影响较大的指标依次为相对沉降、收敛变形、渗漏水和差异沉降，衬砌剥落和裂缝两个指标的权重较小，主要原因是早期的剥落裂缝并不是运营期间产生的，而是由于施工期的不当操作造成，通常情况在运营期这类病害并没有劣化的趋势。
 
-（3）基于影响服役性能因素如周围地层环境、结构上覆荷载等具有空间关联性的假设，采用空间变异理论，将点状、线状的服役性能评估推广为空间网格化评估，宏观上为隧道养护维护工作提供指导。
+(1) The concept of shield tunnel serviceability index(TSI) and assumption of serviceability assessment are defined. Considering the hardness of assessment indicators acquirement and correlation between indicators, six indicators are selected, which are mean relative settlement $sett_{a}$, mean differential settlement $sett_{d\_a}$, mean convergence ratio $cov_a$, leakage are per 100 rings $d_l$, spalling area per 100 rings $d_s$ and cracking length per 100 rings $d_c$. Based on the experts' rating sample results, the multivariate regression method, principal component analysis and canonical correlation are adopted to get TSI formula. The result indicates that the most important indicators are relative settlement, convergence ratio, leakage and differential settlement in the early operation time (because all the rating tunnel samples are built in 20 years). The spalling and cracking indicators have less weight because the experts think these defects are not generated in operation but in construction and usually they are not getting worse in the operation. 
 
-（4）收集整理隧道历史沉降数据，建立了适用于盾构隧道的自回归滑动平均模型（ARMA）和结构向量（SVAR）时间序列模型。建立的ARMA(3,0)对于沉降二阶差分的拟合$R^2$在0.6以上，原始沉降数据的拟合$R^2$在0.95以上；结构向量模型则引入向量式模拟多维序列的滞后项关联性，和结构式模拟同期项关联性，建立的SVAR(3)模型对于沉降二阶差分的拟合$R^2$在0.75以上，原始沉降数据的拟合$R^2$在0.97以上。考虑空间关联性的模型精准度得到提高，且由SVAR模型也能得出距离更近的监测点关联性更高。
+（2）统计上海地铁盾构隧道的TSI结果分布，绘制各评估等级的评估指标分布范围，制定评估结果的对应措施。针对TSI公式适用范围外的隧道，如超过20年运营时间的隧道长期服役性能评估，提出动态变权函数对服役性能评估进行修正，模拟评估指标随着运营时间不断劣化对服役性能的影响，根据对服役性能指标劣化严重性的假设，构造分段状态变权函数，将TSI公式应用于隧道全寿命周期。基于影响服役性能因素如周围地层环境、结构上覆荷载等具有空间关联性的假设，采用空间变异理论，将点状、线状的服役性能评估推广为空间网格化评估，宏观上为隧道养护维护工作提供指导。
 
-（5）为了改进传统单体式应用模块复杂、体量庞大、可扩展性差等问题，遵循单一功能、独立部署和轻量级通信的原则，设计了盾构隧道服役性能相关的分析服务，包括数据服务、有限元服务和隧道服役性能服务。并研究了微服务的关键技术，如制定不同服务的请求数据和响应数据标准，讨论在不同分析服务功能下的数据交换方式，包括一对一、一对多、同步、异步的通信模式，对于所有分析服务的管理引入服务发现机制，采用注册中心方式对外提供一致性的调用方式。较传统的单体式应用的扩展性更强，对于已有的不同语言开发的分析功能封装高效，为用户提供一种简单获取分析能力的形式。
+The TSI distribution of Shanghai metro shield tunnel is summarized, the assessment indicator rangs are calculated for each TSI grade, and the maintenance and rehabitation suggestions are given. For the assessed tunnels which are not siutable to apply the TSI formula, such as the long-term serviceability assessment, this paper proposes the dynamic weight method to correct the serviceability index formula. It simulates the affection of the continuing indicator deterioration in operation. Based on the assumption about serverity of indicator deterioration, the segmental state function is constructed, applied on TSI in the tunnel life cycle. What's more, as the explanatory variables of serviceability, such as surrounding geological conditions and ground overload, are spatial associated, the dotted and linear serviceability assessment is used in the grid assessment with the spatial variability theory. This can provide guidance for tunnel maintenance and rehabitation macroscopically.
 
-（6）简单介绍了基础设施智慧服务系统（iS3）的组成，包括基础层、数据层、服务层、应用层和用户层，盾构隧道服役性能微服务成果集成为iS3的服务层，向上对应用层提供服务。另外，本文还开发了iS3 Desktop桌面端和 iS3 Web网页端，在上海地铁12号线工程案例应用中表明，分析服务可为不同应用提供统一的分析能力，辅助管理盾构隧道工程地质勘察、结构设计、运营监测和养护维护各全寿命期阶段。
+（3）收集整理盾构隧道评估指标历史数据，以沉降为例建立适用于盾构隧道的自回归滑动平均模型（ARMA）和结构向量（SVARMA）时间序列模型。建立的ARMA(3,0)对于沉降二阶差分的拟合$R^2$在0.6以上，原始沉降数据的拟合$R^2$在0.95以上；结构向量模型则引入向量式模拟多维序列的滞后项关联性，和结构式模拟同期项关联性，建立的SVARMA(3,0)模型对于沉降二阶差分的拟合$R^2$在0.75以上，原始沉降数据的拟合$R^2$在0.97以上。考虑空间关联性的模型精准度得到提高，且由SVARMA模型分析得出距离更近的监测点关联性更高。将上述模型推广至TSI指标预测，以上海地铁1号线和2号线为例，分析可得TSI在隧道建成后增加较快，5年后逐渐趋于问题，未来呈缓慢增长趋势。
+
+（4）为了改进传统单体式应用模块复杂、体量庞大、可扩展性差等问题，本文提出和设计了一种盾构隧道服役性能分布式服务的分析框架，该框架优势在于：将复杂专业的分析功能转换成云分析服务，供随时随地调用；分析功能可由不同数量和不同位置的计算机提供，可扩展性强。分析服务主要包括数据服务、有限元服务和隧道服役性能服务，研究了微服务的关键技术，包括制定不同服务的请求数据和响应数据标准，讨论在不同分析服务功能下的数据交换方式，对于所有分析服务的管理引入服务发现机制，采用注册中心方式对外提供一致性的调用方式。较传统的单体式应用的扩展性更强，对于已有的不同语言开发的分析功能封装高效，为用户提供一种简单获取分析能力的形式。
+
+（5）介绍了基础设施智慧服务系统（iS3）的组成，包括基础层、数据层、服务层、应用层和用户层，盾构隧道服役性能微服务成果集成为iS3的服务层，向上对应用层提供服务。另外，本文还开发了iS3 Desktop桌面端和 iS3 Web网页端，在上海地铁12号线工程案例应用中表明，分析服务可为不同应用提供统一的分析能力，辅助管理盾构隧道工程地质勘察、结构设计、运营监测和养护维护各全寿命期阶段。
 
 \end{cabstract}
 
