--- a/tex/Abstract.tex
+++ b/tex/Abstract.tex
@@ -13,11 +13,15 @@ The construction of the urban rail transit is increasing these year, leading to 
 
 （2）统计上海地铁盾构隧道的TSI结果分布，绘制各评估等级的评估指标分布范围，制定评估结果的对应措施。针对TSI公式适用范围外的隧道，如超过20年运营时间的隧道长期服役性能评估，提出动态变权函数对服役性能评估进行修正，模拟评估指标随着运营时间不断劣化对服役性能的影响，根据对服役性能指标劣化严重性的假设，构造分段状态变权函数，将TSI公式应用于隧道全寿命周期。基于影响服役性能因素如周围地层环境、结构上覆荷载等具有空间关联性的假设，采用空间变异理论，将点状、线状的服役性能评估推广为空间网格化评估，宏观上为隧道养护维护工作提供指导。
 
-The TSI distribution of Shanghai metro shield tunnel is summarized, the assessment indicator rangs are calculated for each TSI grade, and the maintenance and rehabitation suggestions are given. For the assessed tunnels which are not siutable to apply the TSI formula, such as the long-term serviceability assessment, this paper proposes the dynamic weight method to correct the serviceability index formula. It simulates the affection of the continuing indicator deterioration in operation. Based on the assumption about serverity of indicator deterioration, the segmental state function is constructed, applied on TSI in the tunnel life cycle. What's more, as the explanatory variables of serviceability, such as surrounding geological conditions and ground overload, are spatial associated, the dotted and linear serviceability assessment is used in the grid assessment with the spatial variability theory. This can provide guidance for tunnel maintenance and rehabitation macroscopically.
+(2) The TSI distribution of Shanghai metro shield tunnel is summarized, the assessment indicator rangs are calculated for each TSI grade, and the maintenance and rehabitation suggestions are given. For the assessed tunnels which are not siutable to apply the TSI formula, such as the long-term serviceability assessment, this paper proposes the dynamic weight method to correct the serviceability index formula. It simulates the affection of the continuing indicator deterioration in operation. Based on the assumption about serverity of indicator deterioration, the segmental state function is constructed, applied on TSI in the tunnel life cycle. What's more, as the explanatory variables of serviceability, such as surrounding geological conditions and ground overload, are spatial associated, the dotted and linear serviceability assessment is used in the grid assessment with the spatial variability theory. This can provide guidance for tunnel maintenance and rehabitation macroscopically.
 
-（3）收集整理盾构隧道评估指标历史数据，以沉降为例建立适用于盾构隧道的自回归滑动平均模型（ARMA）和结构向量（SVARMA）时间序列模型。建立的ARMA(3,0)对于沉降二阶差分的拟合$R^2$在0.6以上，原始沉降数据的拟合$R^2$在0.95以上；结构向量模型则引入向量式模拟多维序列的滞后项关联性，和结构式模拟同期项关联性，建立的SVARMA(3,0)模型对于沉降二阶差分的拟合$R^2$在0.75以上，原始沉降数据的拟合$R^2$在0.97以上。考虑空间关联性的模型精准度得到提高，且由SVARMA模型分析得出距离更近的监测点关联性更高。将上述模型推广至TSI指标预测，以上海地铁1号线和2号线为例，分析可得TSI在隧道建成后增加较快，5年后逐渐趋于问题，未来呈缓慢增长趋势。
+（3）收集整理盾构隧道评估指标历史数据，以沉降为例建立适用于盾构隧道的自回归滑动平均模型（ARMA）和结构向量（SVARMA）时间序列模型。建立的ARMA(3,0)对于沉降二阶差分的拟合$R^2$在0.6以上，原始沉降数据的拟合$R^2$在0.95以上；结构向量模型则引入向量式模拟多维序列的滞后项关联性，和结构式模拟同期项关联性，建立的SVARMA(3,0)模型对于沉降二阶差分的拟合$R^2$在0.75以上，原始沉降数据的拟合$R^2$在0.97以上。考虑空间关联性的模型精准度得到提高，且由SVARMA模型分析得出距离更近的监测点关联性更高。将上述模型推广至TSI指标预测，以上海地铁1号线和2号线为例，分析可得TSI在隧道建成后增加较快，5年后逐渐趋于稳定，未来呈缓慢增长趋势。
 
-（4）为了改进传统单体式应用模块复杂、体量庞大、可扩展性差等问题，本文提出和设计了一种盾构隧道服役性能分布式服务的分析框架，该框架优势在于：将复杂专业的分析功能转换成云分析服务，供随时随地调用；分析功能可由不同数量和不同位置的计算机提供，可扩展性强。分析服务主要包括数据服务、有限元服务和隧道服役性能服务，研究了微服务的关键技术，包括制定不同服务的请求数据和响应数据标准，讨论在不同分析服务功能下的数据交换方式，对于所有分析服务的管理引入服务发现机制，采用注册中心方式对外提供一致性的调用方式。较传统的单体式应用的扩展性更强，对于已有的不同语言开发的分析功能封装高效，为用户提供一种简单获取分析能力的形式。
+Based on the collection of historical data of shield tunnnel assessment indicators, the Auto-Regressive Moving Average (ARMA) and Structural Vector ARMA (SVARMA) models are built using settlement data as an example. The established ARMA(3,0) model fits the second-order differential of settlement with a $R^2$ above 0.6, and the original settlement data with a $R^2$ above 0.95. The SVARMA model introduces the vector model to simulate the correlation among the lagging items of multi-dimensional sequence, while the structural modle simulate the contemporaneous correlation. The SVARMA(3,0) model fits the second-order differential of settlement with a $R^2$ above 0.75, and the original settlement data with a $R^2$ above 0.97. The accuracy of the model considering the spatial correlation is improved, and the SVARMA model shows that the monitoring points, which get closer, have a higher correlation. Adopting the above model for TSI forecasting on Shanghai metro lines 1 and 2 and the conclusion is that TSI usually increases rapidly after the completion of the tunnel, then gradually stabilizes after 5 years, and finally slowly increases in the future.
+
+（4）为了改进传统单体式应用模块复杂、体量庞大、可扩展性差等问题，本文提出和设计了一种盾构隧道服役性能分布式服务框架，该框架优势在于：将复杂专业的分析功能转换成云分析服务，供随时随地调用；分析功能可由不同数量和不同位置的计算机提供，可扩展性强。实现的分析服务主要包括数据服务、有限元服务和隧道服役性能服务。研究了微服务的关键技术，包括制定不同服务的请求数据和响应数据标准，讨论在不同分析服务功能下的数据交换方式，对于所有分析服务的管理引入服务发现机制，采用注册中心方式对外提供一致性的调用方式。较传统的单体式应用的扩展性更强，对于已有的不同语言开发的分析功能封装高效，为用户提供一种简单获取分析能力的形式。
+
+(4) In order to solve the traditional monolithic application problems, such as complexity, large volume and poor scalability, this paper proposes and designs a distributed service framework for the shield tunnel serviceability analysis. The advantages of this framework are that it converts the complex professional analysis function into cloud services, which are available for anytime and anywhere; analysis capabilities can be provided by computers in different numbers and locations. The achieved analysis services include data service, finite element service, and shield tunnel serviceability service. The 
 
 （5）介绍了基础设施智慧服务系统（iS3）的组成，包括基础层、数据层、服务层、应用层和用户层，盾构隧道服役性能微服务成果集成为iS3的服务层，向上对应用层提供服务。另外，本文还开发了iS3 Desktop桌面端和 iS3 Web网页端，在上海地铁12号线工程案例应用中表明，分析服务可为不同应用提供统一的分析能力，辅助管理盾构隧道工程地质勘察、结构设计、运营监测和养护维护各全寿命期阶段。
 
