送预盲审版本

--- a/tex/Abstract.tex
+++ b/tex/Abstract.tex
@@ -24,15 +24,15 @@
 
 The construction of the urban rail transit is increasing these year, leading to the problem that the long-term serviceability of shield tunnel is often ignored. In order to avoid the irreversible destruction caused by structure deterioration, it is necessary to have a study on the serviceability assessment, performance prediction and analysis service, providing guidance for daily maintenance and rehabitation. For serviceability assessment, the single assessment indicator cannot be used to get a comprehensive result and the mechanical model cannot simulate the complicated defects in tunnels. For performance prediction, most of the deterioration models focus on the time factor, but not consider the spatial relationship between the data. For analysis service, the monolithic applications are popular solutions, with a poor scalability. Therefor, Shanghai urban rail transit are chosen as the case study to establish the quantitive serviceability assessment, building the spatial-correlated prediction model and design the analysis microservice architecture. The main contents and conclusions are as following:
 
-(1) The concept of shield tunnel serviceability index(TSI) and assumption of serviceability assessment are defined. Considering the hardness of assessment indicators acquirement and correlation between indicators, six indicators are selected, which are mean relative settlement $sett_{a}$, mean differential settlement $sett_{d\_a}$, mean convergence ratio $cov_a$, leakage are per 100 rings $d_l$, spalling area per 100 rings $d_s$ and cracking length per 100 rings $d_c$. Based on the experts' rating sample results, the multivariate regression method, principal component analysis and canonical correlation are adopted to get TSI formula. The result indicates that the most important indicators are relative settlement, convergence ratio, leakage and differential settlement in the early operation time (because all the rating tunnel samples are built in 20 years). The spalling and cracking indicators have less weight because the experts think these defects are not generated in operation but in construction and usually they are not getting worse in the operation. 
+(1) The concept of shield tunnel serviceability index (TSI) and assumption of serviceability assessment are defined. Considering the hardness of assessment indicators acquirement and correlation between indicators, six indicators are selected, which are mean relative settlement $sett_{a}$, mean differential settlement $sett_{d\_a}$, mean convergence ratio $cov_a$, leakage are per 100 rings $d_l$, spalling area per 100 rings $d_s$ and cracking length per 100 rings $d_c$. Based on the experts' rating sample results, the multivariate regression method, principal component analysis and canonical correlation are adopted to get TSI formula. The result indicates that the most important indicators are relative settlement, convergence ratio, leakage and differential settlement in the early operation time (because all the rating tunnel samples are built in 20 years). The spalling and cracking indicators have less weight because the experts think these defects are not generated in operation but in construction and usually they are not getting worse in the operation. 
 
-(2) The TSI distribution of Shanghai metro shield tunnel is summarized, the assessment indicator rangs are calculated for each TSI grade, and the maintenance and rehabitation suggestions are given. For the assessed tunnels which are not siutable to apply the TSI formula, such as the long-term serviceability assessment, this paper proposes the dynamic weight method to correct the serviceability index formula. It simulates the affection of the continuing indicator deterioration in operation. Based on the assumption about serverity of indicator deterioration, the segmental state function is constructed, applied on TSI in the tunnel life cycle. What's more, as the explanatory variables of serviceability, such as surrounding geological conditions and ground overload, are spatial associated, the dotted and linear serviceability assessment is used in the grid assessment with the spatial variability theory. This can provide guidance for tunnel maintenance and rehabitation macroscopically.
+(2) The TSI distribution of Shanghai metro shield tunnel is summarized, the assessment indicator rang are calculated for each TSI grade, and the maintenance and rehabitation suggestions are given. For the assessed tunnels which are not suitable to apply the TSI formula, such as the long-term serviceability assessment, this paper proposes the dynamic weight method to correct the serviceability index formula. It simulates the affection of the continuing indicator deterioration in operation. Based on the assumption about serverity of indicator deterioration, the segmental state function is constructed, applied on TSI in the tunnel life cycle. What's more, as the explanatory variables of serviceability, such as surrounding geological conditions and ground overload, are spatial associated, the dotted and linear serviceability assessment is used in the grid assessment with the spatial variability theory. This can provide guidance for tunnel maintenance and rehabitation macroscopically.
 
-(3) Based on the collection of historical data of shield tunnnel assessment indicators, the Auto-Regressive Moving Average (ARMA) and Structural Vector ARMA (SVARMA) models are built using settlement data as an example. The established ARMA(3,0) model fits the second-order differential of settlement with a $R^2$ above 0.6, and the original settlement data with a $R^2$ above 0.95. The SVARMA model introduces the vector model to simulate the correlation among the lagging items of multi-dimensional sequence, while the structural modle simulate the contemporaneous correlation. The SVARMA(3,0) model fits the second-order differential of settlement with a $R^2$ above 0.75, and the original settlement data with a $R^2$ above 0.97. The accuracy of the model considering the spatial correlation is improved, and the SVARMA model shows that the monitoring points, which get closer, have a higher correlation. Adopting the above model for TSI forecasting on Shanghai metro lines 1 and 2 and the conclusion is that TSI usually increases rapidly after the completion of the tunnel, then gradually stabilizes after 5 years, and finally slowly increases in the future.
+(3) Based on the collection of historical data of shield tunnel assessment indicators, the Auto-Regressive Moving Average (ARMA) and Structural Vector ARMA (SVARMA) models are built using settlement data as an example. The established ARMA(3,0) model fits the second-order differential of settlement with a $R^2$ above 0.6, and the original settlement data with a $R^2$ above 0.95. The SVARMA model introduces the vector model to simulate the correlation among the lagging items of multi-dimensional sequence, while the structural model simulates the contemporaneous correlation. The SVARMA(3,0) model fits the second-order differential of settlement with a $R^2$ above 0.75, and the original settlement data with a $R^2$ above 0.97. The accuracy of the model considering the spatial correlation is improved, and the SVARMA model shows that the monitoring points, which get closer, have a higher correlation. Adopting the above model for TSI forecasting on Shanghai metro lines 1 and 2 and the conclusion is that TSI usually increases rapidly after the completion of the tunnel, then gradually stabilizes after 5 years, and finally slowly increases in the future.
 
-(4) In order to solve the traditional monolithic application problems, such as complexity, large volume and poor scalability, this paper proposes and designs a distributed service framework for the shield tunnel serviceability analysis. The advantages of this framework are that it converts the complex professional analysis function into cloud services, which are available for anytime and anywhere; analysis capabilities can be provided by computers in different numbers and locations. The achieved analysis services include data service, finite element service, and shield tunnel serviceability service. The key technologies of microservices are studied, including developing the request and response data standards of defferent services, analysising the data exchange methods, introducing service discovery mechanisms for the management of all services, and designing a registration center for the consistent assess to the services. This architecture is more scalable than the monolithic applications. It is easy for the existing different services to call from each others and it provides users with a simple assess to analysis capabilities.
+(4) In order to solve the traditional monolithic application problems, such as complexity, large volume and poor scalability, this paper proposes and designs a distributed service framework for the shield tunnel serviceability analysis. The advantages of this framework are that it converts the complex professional analysis function into cloud services, which are available for anytime and anywhere; analysis capabilities can be provided by computers in different numbers and locations. The achieved analysis services include data service, finite element service, and shield tunnel serviceability service. The key technologies of microservices are studied, including developing the request and response data standards of different services, analyzing the data exchange methods, introducing service discovery mechanisms for the management of all services, and designing a registration center for the consistent assess to the services. This architecture is more scalable than the monolithic applications. It is easy for the existing different services to call from each others and it provides users with a simple assess to analysis capabilities.
 
-(5) The concept of infrastructure smart service system (iS3) is introduced. It is consist of the base layer, data layer, service layer, application layer and user layer. The results of this paper are integrated into the service layer of iS3, which provides services to the application layer. What's more, the iS3 Desktop and iS3 Web applications are also developed. A case study on Shanghai Metro Line 12 shows that the service layer can provide consistent analysis capabilities for different applications, which can be used in the management in the shiled tunnle life cycle time, such as geology survey, structure design, operation mornitoring, maintenance and rehabitation.
+(5) The concept of infrastructure smart service system (iS3) is introduced. It is consist of the base layer, data layer, service layer, application layer and user layer. The results of this paper are integrated into the service layer of iS3, which provides services to the application layer. What's more, the iS3 Desktop and iS3 Web applications are also developed. A case study on Shanghai Metro Line 12 shows that the service layer can provide consistent analysis capabilities for different applications, which can be used in the management in the shield tunnel life cycle time, such as geology survey, structure design, operation monitoring, maintenance and rehabitation.
 
 \end{eabstract}
 
