--- a/tex/Chap6.tex
+++ b/tex/Chap6.tex
@@ -6,10 +6,10 @@
 
 本文主要以盾构隧道结构为研究对象，以上海城市轨道交通12号线为工程案例，研究了盾构隧道服役性能定量化的评估方法，建立了考虑空间关联性的服役性能预测模型，以及设计了微服务架构的分析服务，上述三部分主要内容均集成于基础设施智慧服务系统（iS3）。具体内容与结论如下：
 
-（1）在考虑盾构隧道评估指标获取难度和指标相关性基础上，最终选取了六个指标，分别为相对沉降平均值${sett}_{a}$、平均差异沉降$set{{t}_{d\_a}}$、平均收敛变形率${cov}_{a}$、渗漏水面积${d}_{l}$、衬砌剥落面积${d}_{s}$和裂缝长度${d}_{c}$，对39个隧道样本进行专家打分基础上，采用偏最小二乘、主成分分析和典型相关性分析对服役性能TSI回归拟合，标准化$TSI'$和$TSI$公式如下
+（1）在考虑盾构隧道评估指标获取难度和指标相关性基础上，最终选取了六个指标，分别为相对沉降平均值${sett}_{a}$、平均差异沉降$set{{t}_{d\_a}}$、平均收敛变形率${cov}_{a}$、渗漏水面积${d}_{l}$、衬砌剥落面积${d}_{s}$和裂缝长度${d}_{c}$，对39个隧道样本进行专家打分基础上，采用偏最小二乘、主成分分析和典型相关性分析对服役性能TSI回归拟合，标准化${\xi }_{TSI}$和$TSI$公式如下
 \begin{align}
-  & TS{I}'=0.62\sqrt{set{{{{t}'}}_{a}}}+0.13set{{{{t}'}}_{d\_a}}+0.25\operatorname{co}{{{{v}'}}_{a}} \nonumber \\ 
- & \quad \quad \quad +0.19{{{{d}'}}_{l}}+0.06{{d}_{c}}^{\prime }+0.03{{{{d}'}}_{s}} \nonumber \\
+  & {\xi }_{TSI}=0.62{\xi }_{\sqrt{set{{{{t}}}_{a}}}}+0.13{\xi }_{set{{{{t}}}_{d\_a}}}+0.25{\xi }_{cov_a} \nonumber \\ 
+ & \quad \quad \quad +0.19{\xi }_{{{{d}}}_{l}}+0.06{\xi }_{{d}_{c}}+0.03{\xi }_{{{{d}}}_{s}} \nonumber \\
   & TSI=0.77+0.16\sqrt{set{{t}_{a}}}+0.01set{{t}_{d\_a}}+0.09{{\operatorname{cov}}_{a}} \nonumber \\ 
  & \quad \quad \quad +0.08{{d}_{l}}+0.05{{d}_{c}}+0.50{{d}_{s}} \nonumber 
 \end{align}
