--- a/tongjiutils.sty
+++ b/tongjiutils.sty
@@ -109,9 +109,9 @@ would like to use here]
 \RequirePackage{hyperref}
 \hypersetup{
   colorlinks,
-  linkcolor=hypercolor,
-  anchorcolor=hypercolor,
-  citecolor=hypercolor,
+  linkcolor=black,
+  anchorcolor=black,
+  citecolor=black,
   urlcolor=black
 }
 
