--- a/tex/Ack.tex
+++ b/tex/Ack.tex
@@ -1,9 +1,6 @@
 %!TEX root = ../thesis.tex
 \begin{ack}\fs
 %TODO
-非常感谢……
+高考结束后，不曾想过会在上海待九年之久，不知不觉在同济度过最美好的年华，从前的腼腆少年多了一份沉着冷静，一路的酸甜苦辣将成为未来人生中不可或缺的经历。回想大学生活，在环境学院向往着建筑学院，准备一段日子后醒悟自身并没有艺术细胞，辗转到土木学院，研究生阶段又醉心下载各类精良软件比选测试，后来恰巧有幸参与iS3开发，专研计算机领域知识，到毕业时希望去互联网行业发展，突然发现也许我骨子里有一种不安分的基因吧。
 
-Many thanks to……
-
-どうもありがとう……
 \end{ack}
