--- a/tex/Chap3.tex
+++ b/tex/Chap3.tex
@@ -946,7 +946,9 @@ SVAR在VAR模型的基础上揭示了变量之间的相互作用。由于VAR/SVA
     \label{fig:2号线不同沉降监测点SVAR3模型拟合与预测结果} 
 \end{figure}
 
-采用SVAR(3)模型对地铁2号线，上行线18753.51至18993.93里程的200环衬砌进行评估，结果如图~\ref{fig:地铁2号线沉降预测TSI结果}~所示。图~\ref{fig:地铁2号线沉降预测TSI结果}a~为区间沉降预测图，该区间的沉降模型呈“两头大，中间小”，即靠近车站的隧道沉降较大，在2012年大约在120mm，而隧道中间的越江段沉降非常小，只有20mm左右。图~\ref{fig:地铁2号线沉降预测TSI结果}b~展示了预测区段中的四个监测点的沉降数据，2号线同1号线一样，沉降数据在2009年至2012年之间已经趋于稳定，大致在120mm，后续的预测数据也基本保持该趋势，呈缓慢下降状态。图~\ref{fig:地铁2号线沉降预测TSI结果}c~描述了根据沉降数据计算的$TSI$值，在2012年该区段的$TSI$值就达到2.5，介于“好”和“一般”之间，主要原因同1号线，相对沉降较大，最大的相对沉降达到100mm，在这之后$TSI$缓慢上升，预测2030年时为2.8，接近“一般”级别。2号线计算的$TSI$劣于1号线的另外一个原始是2号线拟合残差的白噪声较大，在叠加白噪声后导致差异沉降稍大。
+采用SVAR(3)模型对地铁2号线，上行线18753.51至18993.93里程的200环衬砌进行评估，结果如图~\ref{fig:地铁2号线沉降预测TSI结果}~所示。图~\ref{fig:地铁2号线沉降预测TSI结果}a~为区间沉降预测图，该区间的沉降模型呈“两头大，中间小”，即靠近车站的隧道沉降较大，在2012年大约在120mm，而隧道中间的越江段沉降非常小，只有20mm左右。图~\ref{fig:地铁2号线沉降预测TSI结果}b~展示了预测区段中的四个监测点的沉降数据，2号线同1号线一样，沉降数据在2009年至2012年之间已经趋于稳定，大致在120mm，后续的预测数据也基本保持该趋势，呈缓慢下降状态。图~\ref{fig:地铁2号线沉降预测TSI结果}c~描述了根据沉降数据计算的$TSI$值，在2012年该区段的$TSI$值就达到2.5，介于“好”和“一般”之间，主要原因同1号线，相对沉降较大，最大的相对沉降达到100mm，在这之后$TSI$缓慢上升。
+
+为更充分验证模型的有效性，在2018年收集地铁二号线最新沉降数据，采用2002年至2011年的SVAR（3）模型，预测2012年-2017年6年的沉降。上文中采用的预测方式为静态预测，即下一次的预测数据均基于前几次的真实数据进行计算，相当于每一次引入最新的真实数据对模型进行调整；但实际应用中静态预测的价值不大，因为静态预测只能预测一次数据，要预测未来多次数据需采用动态预测，即下一次的预测数据是基于前几次的预测数据计算的。一般地，动态预测精度会低于静态预测。2号线最新数据的动态预测结果如图~\ref{fig:2号线2018年沉降动态预测}~所示，图中可知动态预测结果与真实结果大致相同，但图中也可发现，对于4、5年后的沉降预测可能会存在偏差，一般多年后的预测结果仅作参考。
 
 \begin{figure}[htbp] 
     \centering 
@@ -960,6 +962,13 @@ SVAR在VAR模型的基础上揭示了变量之间的相互作用。由于VAR/SVA
     \end{tabular}
     \caption{地铁2号线沉降预测TSI结果} 
     \label{fig:地铁2号线沉降预测TSI结果} 
+\end{figure}
+
+\begin{figure}[htb!]
+    \centering
+    \includegraphics[width=1.0\textwidth]{chap3/sett-2018.eps}
+    \caption{2号线2018年沉降动态预测}
+    \label{fig:2号线2018年沉降动态预测}
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
