--- a/tongjiutils.sty
+++ b/tongjiutils.sty
@@ -20,6 +20,10 @@ would like to use here]
 % 跨页表格
 \RequirePackage{longtable}
 
+% 公式字体
+\RequirePackage{newtxtext}
+\RequirePackage{newtxmath}
+
 % 固定宽度的表格
 %\RequirePackage{tabularx}
 
