答辩前版本

--- a/tex/Ack.tex
+++ b/tex/Ack.tex
@@ -1,6 +1,17 @@
 %!TEX root = ../thesis.tex
 \begin{ack}\fs
 %TODO
-高考结束后，不曾想过会在上海待九年之久，不知不觉在同济度过最美好的年华，从前的腼腆少年多了一份沉着冷静，一路的酸甜苦辣将成为未来人生中不可或缺的经历。回想大学生活，在环境学院向往着建筑学院，准备一段日子后醒悟自身并没有艺术细胞，辗转到土木学院，研究生阶段又醉心下载各类精良软件比选测试，后来恰巧有幸参与iS3开发，专研计算机领域知识，到毕业时希望去互联网行业发展，突然发现也许我骨子里有一种不安分的基因吧。
+高考结束后，不曾想过会在上海待九年之久，不知不觉在同济度过最美好的年华，从前的腼腆少年多了一份沉着冷静，一路的酸甜苦辣将成为未来人生中不可或缺的经历。回想大学生活，在环境学院向往着建筑学院，准备一段日子后醒悟自身并没有艺术细胞，辗转到土木学院，研究生阶段又醉心下载各类精良软件比选测试，后来恰巧有幸参与iS3开发，专研计算机领域知识，到毕业时希望去互联网行业发展，突然发现也许我骨子里有一种不安分的基因吧。愿在毕业后能一直保持对新事物的好奇心。
+
+最早认识导师丁文其教授是在地下建筑结构的课程上，那时丁老师讲解了许多地下领域的世界级工程，专业知识信手拈来，课堂风格天马行空，让我对地下建筑产生浓厚兴趣。丁老师对学术工作严谨认真，这在我协助举办GeoShanghai的一年时间里深有体会，对学生循循善诱，包容我刚进教研室时的许多低级错误，同时导师也平易近人，以前常常组会后带领大家去吃最爱的新亚大包。至今仍很感谢丁老师在博士保研时给予的帮助。
+
+博士期间师从李晓军教授，最开始在土木工程CAD课上听李老师介绍同济曙光软件，后来本科毕业设计跟李老师学习WebGIS的开发，这些经历对我博士阶段研究方向启发很大，也是李老师在我入学之初对我的肯定和鼓励，让我坚定地在土木工程信息化领域完成博士论文。导师对科研和工作细心负责，精益求精，援藏期间，即使在高原艰苦环境下，仍帮我一句一句修改论文，指出论文的不足之处。另外也要感谢朱合华老师、蔡永昌老师和闫治国老师在博士期间给予的指导。
+
+同时也要感谢701里的各位，感谢武威师兄在科研、工作和生活中的许多建议，沈奕师兄在我遇到困难时的开导鼓励，陈建琴和陈雪琴学姐在学术上树立的榜样，同门林浩、洪弼宸、龚卿、李彦东、周龙、周晓舟、陈楠、卢中贺、刘雨芃、郭宇靖、陈超陪伴的快乐科研时光，还有王昕师弟让我养成健身的习惯，朱梦琦师妹对本文排版和错字的校核，和其他师兄弟姐妹在博士期间提供的帮助。感谢家人的关心与支持，让我无忧无虑完成学业，以及感谢未婚妻小洪在博士五年的陪伴，让枯燥焦虑的科研生活多了一些乐趣与期盼。
+
+最后要感谢盛泽、王杰、瓜瓜、Doris、立凡、豆豆、晓君、Han Yun、朱琦、速不台、天霄、亮哥，在技术路线和职业规划上的许多宝贵意见。也谢谢@wildwolf、@svandex、@zhao-chen等用户的同济大学论文模板项目，本文的模板、原稿和文中源码均可在https://github.com/linxdcn获取，如果觉得有帮助能给一个star或follow我都会很高兴。
+
+\rightline{林晓东}
+\rightline{2018年6月于同济}
 
 \end{ack}
