--- a/tex/Chap1.tex
+++ b/tex/Chap1.tex
@@ -40,7 +40,8 @@
 
 美国《公路和铁路交通隧道检查手册》（FHWA，\citeyear{FHWA2005Highway}）给出隧道病害检测的一般流程，将隧道病害分为轻度、中度和严重三个等级，并规定了病害定量或者定性的评估标准。同时该手册建立了隧道结构的状态的状态分级标准，总共分为0到9十个级别，但手册只是定性地给出这十个等级的评定标准，并未给出具体的、定量的评价方法。
 
-我国《地铁设计规范》（GB50157，\citeyear{GB501572013}）对各类隧道病害指标作了规定，如建议衬砌环的直径变形控制在4-6\%衬砌直径以内；地下车站、连接通道和机电设备集中区段的防水等级应为一级，不允许渗水，结构表面无湿渍，区间隧道及连接通道等附属隧道机构防水等级应为二级，顶部不允许滴漏，其他不允许漏水，结构表面可有少量湿渍；衬砌管片的接缝张开量控制在1-2mm以内等。该规范并未对隧道状态评估进行规定。
+我国《地铁设计规范》（GB50157，\citeyear{GB501572013}）对各类隧道病害指标作了规定，按照盾构隧道设计一般要求，隧道拼装成环后在
+外部荷载作用下，允许直径累计变化量小于$5‰D$（$D$为隧道外径，王如路和张冬梅，\citeyear{王如路2013超载作用下软土盾构隧道横向变形机理及控制指标研究}）；地下车站、连接通道和机电设备集中区段的防水等级应为一级，不允许渗水，结构表面无湿渍，区间隧道及连接通道等附属隧道机构防水等级应为二级，顶部不允许滴漏，其他不允许漏水，结构表面可有少量湿渍；衬砌管片的接缝张开量控制在1-2mm以内等。该规范并未对隧道状态评估进行规定。
 
 我国《盾构法隧道结构服役性能鉴定规范》（DG/TJ08-2123-2013，\citeyear{DGTJ0821232013}）根据设计规定、使用时间、使用条件和使用状况，进行结构服役性能鉴定。将隧道结构服役性能等级分级为正常、退化、劣化、恶化、危险五个等级，如表~\ref{tab:服役状态等级分级标准}~所示。将隧道结构服役状态鉴定分为五个层次，分别为隧道结构使用环境、构件服役状态等级评定、结构连接服役状态等级评定、结构区段服役状态等级评定和隧道整体服役状态等级评定，每一个层次的评定根据上一个层次评定结果所占比例决定。
 
@@ -69,7 +70,7 @@
 
 吴江滨（\citeyear{吴江滨2004铁路运营隧道衬砌状态评估体系的建立及工程应用研究}）在收集100余座铁路运营隧道数据基础上，提出隧道衬砌状态的评价体系，各个评价指标的评估标准根据应力集中系数给出，采用层次分析模型对隧道进行评估。但由于评价指标仅仅考虑了衬砌厚度和衬砌背后接触情况，评价指标过少，该评价体系未能很好反映隧道真实状态。
 
-罗鑫（\citeyear{罗鑫2008公路隧道健康状态评估方法及系统研究}）根据综合评估指标遴选原则和层次分析法原理，确定并建立了公路隧道结构健康状况综合评估体系，给出了不同评估指标的定量评定标准。采用乘积标度发确定指标的标度权重，再根据指标权重和样本数据，采用人工神经网络和模糊理论确定准则层指标权重，给出了隧道健康状态的模糊综合评价模型。
+罗鑫（\citeyear{罗鑫2008公路隧道健康状态评估方法及系统研究}）根据综合评估指标遴选原则和层次分析法原理，确定并建立了公路隧道结构健康状况综合评估体系，给出了不同评估指标的定量评定标准。采用乘积标度法确定指标的标度权重，再根据指标权重和样本数据，采用人工神经网络和模糊理论确定准则层指标权重，给出了隧道健康状态的模糊综合评价模型。
 
 刘涛（\citeyear{刘涛2008既有盾构隧道结构性能评价研究}）研究了现有城市盾构隧道的评估体系构成，和相应的评估工作流程，认为盾构隧道结构服役性能应该包含结构的安全性和耐久性，将评估指标分为整体的性能评估指标、安全性能的评估指标和耐久性的评估指标。并提出盾构隧道衬砌耐久性退化模型，基于Bayesian条件概率对耐久性模型进行修正，采用可靠度理论和Markov链方法对隧道结构的服役性能进行评价。
 
@@ -247,7 +248,7 @@ Borrmann和Jubierre（\citeyear{borrmann2013multi}）认为现有的IFC标准无
 
 已有基于数学模型的评估方法未考虑各指标之间的相关性和单个指标权重随着指标劣化而变化的情况。在隧道服役性能评估方面，层次分析法因具有综合性强，原理简单等优点，被广泛应用（戴胜，\citeyear{戴胜2008越江盾构隧道耐久性分析与评估体系研究}；李晓英等，\citeyear{李晓英2008铁路隧道健康状态模糊评价体系研究}；段怀志，\citeyear{段怀志2009隧道及地下工程健康评估研究}；张素磊，\citeyear{张素磊2012隧道衬砌结构健康诊断及技术状况评定研究}；Rao等，\citeyear{rao2016fuzzy}）。根据层次分析法的理论原理（Saaty和Vargas，\citeyear{saaty2012models}），评估指标之间是相互独立的，但实际情况并非如此，如隧道的横向收敛会导致衬砌纵缝的张开量，隧道的纵向变形会导致衬砌环向接缝的张开量和衬砌环错台的发生。另外，由层次分析法评判矩阵计算得出的指标权重是常量，在实际情况中，当某一评估指标劣化严重时，根据“木桶效应”，隧道的整体服役性能应该是迅速下降的，体现为劣化指标权重的增加。
 
-在其他工程领域，已由点状和线状的评估方法向网格化空间评估发展，如洪水灾害评估模型基于空间网格计算洪水灾害损失（Su等，\citeyear{su2005grid}）；Islam等，\citeyear{islam2007grid}；朱强等，\citeyear{朱强2007基于网格的洪水损失计算模型}）、铁路轨道网格（或部件）的空间风险评估模型（郭孟欣等，\citeyear{郭孟欣2016基于网格的铁路建设工程风险指数评价模型研究}；白磊，\citeyear{白磊2017铁路轨道健康管理网格化分析决策模型研究}）、道路工程的网状路面开裂评估模型（Jenelius，\citeyear{jenelius2012road}）等，对于盾构隧道相关研究较少。
+在其他工程领域，已由点状和线状的评估方法向网格化空间评估发展，如洪水灾害评估模型基于空间网格计算洪水灾害损失（Su等，\citeyear{su2005grid}；Islam等，\citeyear{islam2007grid}；朱强等，\citeyear{朱强2007基于网格的洪水损失计算模型}）、铁路轨道网格（或部件）的空间风险评估模型（郭孟欣等，\citeyear{郭孟欣2016基于网格的铁路建设工程风险指数评价模型研究}；白磊，\citeyear{白磊2017铁路轨道健康管理网格化分析决策模型研究}）、道路工程的网状路面开裂评估模型（Jenelius，\citeyear{jenelius2012road}）等，对于盾构隧道相关研究较少。
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
 \subsection{服役性能预测的问题}
