--- a/tongjiutils.sty
+++ b/tongjiutils.sty
@@ -110,12 +110,13 @@ would like to use here]
 
 % 超链接颜色
 \definecolor{hypercolor}{rgb}{0.047,0.216,0.627}
+\definecolor{redcolor}{rgb}{0.882,0.184,0.553}
 \RequirePackage{hyperref}
 \hypersetup{
   colorlinks,
   linkcolor=black,
-  anchorcolor=black,
-  citecolor=black,
+  anchorcolor=redcolor,
+  citecolor=hypercolor,
   urlcolor=black
 }
 
