--- a/tex/Resume.tex
+++ b/tex/Resume.tex
@@ -15,26 +15,27 @@
 	[1]~Xiaojun Li, Xiaodong Lin, Hehua Zhu, Xiuzhi Wang, and Zhaoming Liu. "Condition assessment of shield tunnel using a new indicator: The tunnel serviceability index." Tunnelling and Underground Space Technology 67 (2017): 98-106.
 
 	\hangindent 1.5em
-	[2]~朱合华, 李晓军, 林晓东. 基础设施智慧服务系统 (iS3) 及其应用. 土木工程学报 51.1 (2018): 1-12.
+	[2] Lin, Xiaodong, Xiaojun Li, and Hehua Zhu. "A Web-based Digital Platform for Shield Tunnel Operation Management." In Information Technology in Geo-Engineering: Proceedings of the 2nd International Conference (ICITG) Durham, UK, vol. 3, p. 130. IOS Press, 2014.
 
 	\hangindent 1.5em
-	[3]~林晓东, 李晓军, 林浩. 集成GIS/BIM的盾构隧道全寿命管理系统研究. 隧道建设.
-
-	\resumeitem{待发表论文}
+	[3] Li, Xiaojun, Xiaodong Lin, Hehua Zhu, Xiuzhi Wang, and Zhaoming Liu. "A BIM/GIS-based management and analysis system for shield tunnel in operation.
 
 	\hangindent 1.5em
-	[1]~李晓军, 林晓东, 王建, 史海欧, 袁泉, 翟利华. 考虑空间关联性的轨道交通盾构隧道沉降时间序列模型
+	[4]~朱合华, 李晓军, 林晓东. 基础设施智慧服务系统 (iS3) 及其应用. 土木工程学报 51.1 (2018): 1-12.
 
 	\hangindent 1.5em
-	[2]~李晓军, 林晓东, 朱合华, 陈楠. 考虑发展趋势和动态权重的盾构隧道健康状态模糊层次分析法.
+	[5]~林晓东, 李晓军, 林浩. 集成GIS/BIM的盾构隧道全寿命管理系统研究. 隧道建设 2018(6).
 
-	\resumeitem{学术会议}
+	% \resumeitem{待发表论文}
 
-	\hangindent 1.5em
-	[1]~The Second  International  Conference  on  Information  Technology  in  Geo-Engineering (ICITG2014), July 21-22, 2014, Durham, UK. （做了题为“A Web-based Digital Platform for Shield Tunnel Operation Management”的报告）
+	% \hangindent 1.5em
+	% [1]~丁文其, 林晓东, 李晓军. 基于GIS的地铁盾构隧道状态网格化评估
 
-	\hangindent 1.5em
-	[2]~The 16th International Conference on Computing in Civil and Building Engineering (ICCCBE2016), July 6-8, 2016, Osaka, Japan. (做了题为“A BIM/GIS-based management and analysis system for shield tunnel in operation”的报告)
+	% \hangindent 1.5em
+	% [1]~李晓军, 林晓东, 王建, 史海欧, 袁泉, 翟利华. 考虑空间关联性的轨道交通盾构隧道沉降时间序列模型
+
+	% \hangindent 1.5em
+	% [2]~李晓军, 林晓东, 朱合华, 陈楠. 考虑发展趋势和动态权重的盾构隧道健康状态模糊层次分析法.
 
 	\resumeitem{软件著作权}
 
